--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flowering",
-  "homepage": "https://nicolastoon.github.io/flowering/",
+  "homepage": "",
   "private": false,
   "version": "0.0.0",
   "type": "module",
